feat: Add podcast section and AI integration
This commit introduces a new podcast section to Nexus News, expanding content offerings. It also adds foundational elements for AI integration by including the Google GenAI library and defining key types and constants related to AI-driven features.

Additionally, this update refines the UI with new animations and scrollbar styling for a smoother user experience. The header component has been enhanced to support navigation between articles, podcasts, and live content, and to allow filtering by category when navigating to the archives.

The following changes were made:
- Added `@google/genai` to dependencies.
- Introduced `keyframes` and `animation` for fade-in effects in Tailwind CSS.
- Implemented `.hide-scrollbar` CSS class.
- Added `Podcast` type definition and `latestPodcasts` constant.
- Enhanced `Header` component with new navigation options and category filtering.
- Modified `App` component to manage `homeView` and `initialCategory` states.
- Updated `allArticles` with new categories and adjusted existing ones.
- Added initial setup for AI-related imports and types.

--- a/index.html
+++ b/index.html
@@ -18,16 +18,39 @@
             fontFamily: {
               sans: ['Poppins', 'sans-serif'],
             },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: '0', transform: 'translateY(-10px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
+              },
+            },
+            animation: {
+              'fade-in': 'fadeIn 0.5s ease-out forwards',
+              'fade-in-fast': 'fadeIn 0.2s ease-out forwards',
+            }
           },
         },
       }
     </script>
+    <style>
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .hide-scrollbar::-webkit-scrollbar {
+        display: none;
+      }
+
+      /* Hide scrollbar for IE, Edge and Firefox */
+      .hide-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+      }
+    </style>
   <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0"
   }
 }
 </script>
